Added custom animations to the title and header

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
     <head>
         <title>Luis Graterol</title>
         <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/scripts.js"></script>
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
-            <h1><i class="fa fa-angle-left" aria-hidden="true"></i> LuisGraterol <i class="fa fa-terminal" aria-hidden="true"></i></h1>
+            <h1 class="title"><i class="fa fa-angle-left" aria-hidden="true"></i> <i class="fa fa-terminal terminal" aria-hidden="true"></i></h1>
             <ul>
                 <li>Home</li>
                 <li>Portfolio</li>
@@ -18,5 +17,7 @@
                 <li>Contact</li>
             </ul>
         </header>
+
+        <script type="text/javascript" src="js/scripts.js"></script>
     </body>
 </html>
