--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
     <body>
         <header>
