--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -18,6 +19,29 @@
                 <li>Contact</li>
             </ul>
         </header>
+
+        <main>
+            <p><i class="fa fa-cog fa-spin fa-lg" aria-hidden="true"></i> This webpage is under construction!</p>
+            <p>Please, feel free to reach my at any of the options below:</p>
+
+            <div id="contact-buttons">
+                    <!-- Facebook -->
+                    <a href="https://www.facebook.com/luis.graterol2?ref=bookmarks" target="_blank"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
+
+                    <!-- Google+ -->
+                    <a href="https://plus.google.com/u/0/106466560980500754466/posts" target="_blank"><i class="fa fa-google-plus-official fa-lg" aria-hidden="true"></i></a>
+
+                    <!-- LinkedIn -->
+                    <a href="https://www.linkedin.com/in/luis-graterol-1059a2100?trk=nav_responsive_tab_profile" target="_blank"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
+
+                    <!-- Twitter -->
+                    <a href="https://twitter.com/luisgraterol97" target="_blank"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+            </div>
+        </main>
+
+        <footer>
+			<p><i class="fa fa-code"></i> by Luis A. Graterol.</p>
+	    </footer>
 
         <script type="text/javascript" src="js/scripts.js"></script>
     </body>
