--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <main>
             <p><i class="fa fa-cog fa-spin fa-lg" aria-hidden="true"></i> This webpage is under construction!</p>
-            <p>Please, feel free to reach my at any of the options below:</p>
+            <p>Please, feel free to reach me at any of the options below:</p>
 
             <div id="contact-buttons">
                     <!-- Facebook -->
