Fixed typo and loading appearance timing.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <main>
             <p><i class="fa fa-cog fa-spin fa-lg" aria-hidden="true"></i> This webpage is under construction!</p>
-            <p>Please, feel free to reach my at any of the options below:</p>
+            <p>Please, feel free to reach me at any of the options below:</p>
 
             <div id="contact-buttons">
                     <!-- Google+ -->
@@ -33,7 +33,7 @@
 
                     <!-- Twitter -->
                     <a href="https://twitter.com/luisgraterol97" target="_blank"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
-                    
+
                     <!-- Facebook -->
                     <a href="https://www.facebook.com/luis.graterol2?ref=bookmarks" target="_blank"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
             </div>
