--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 
             <div id="contact-buttons">
                     <!-- Google+ -->
-                    <a href="https://plus.google.com/u/0/106466560980500754466/posts" target="_blank"><i class="fa fa-google-plus-official fa-lg" aria-hidden="true"></i></a>
+
+                    <a href="mailto:luisgraterol97@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
 
                     <!-- LinkedIn -->
                     <a href="https://www.linkedin.com/in/luis-graterol-1059a2100?trk=nav_responsive_tab_profile" target="_blank"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
 
                     <!-- Twitter -->
-                    <a href="https://twitter.com/luisgraterol97" target="_blank"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/_luisgraterolp" target="_blank"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
 
                     <!-- Facebook -->
                     <a href="https://www.facebook.com/luis.graterol2?ref=bookmarks" target="_blank"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
